# hive-agent-py

./: .env.example  .gitignore  README.md  demo.py  hive_config.toml  hive_config_example.toml  pyproject.toml  pytest.ini  requirement2.txt  requirements-dev.txt  requirements.txt  settings.toml  setup.py  test.py  tutorial.md
.github/: test.yml
.github/workflows/: test.yml
config/: db_params.py
hive_agent/: __init__.py  agent.py  api_models.py  llm_settings.py  routes.py  sdk_context.py  swarm.py
hive_agent/cache_folder/chroma_vectorstore/: chroma.sqlite3
hive_agent/chat/: __init__.py  chat_manager.py  schemas.py
hive_agent/config/: api_param.py  config.py  db_params.py  hive_config.toml  params.py
hive_agent/database/: database.py  schemas.py
hive_agent/filestore/: __init__.py  filestore.py
hive_agent/ingestion_modules/: __init__.py
hive_agent/ingestion_modules/custom_vectorstore/: __init__.py  base_method_vectorstore.py  chroma_service.py
hive_agent/llms/: __init__.py  claude.py  gemini.py  llama.py  llm.py  llms.py  mistral.py  ollama.py  openai.py  utils.py
hive_agent/llms/utils/: __init__.py  utils.py
hive_agent/server/: models.py
hive_agent/server/routes/: Hive.code-workspace  __init__.py  chat.py  database.py  entry.py  files.py  vectorindex.py
hive_agent/store/: __init__.py  models.py  store.py
hive_agent/system_component/: system_logging.py
hive_agent/tools/agent_db/: __init__.py  basic_retrieve.py  nl_query.py  schema.py
hive_agent/tools/retriever/: base_retrieve.py  chroma_retrieve.py  pinecone_retrieve.py
hive_agent/utils/: __init__.py  tools.py
hive_agent/wallet/: __init__.py  wallet.py
ingestion_modules/: utils.py
ingestion_modules/custom_docstore/: __init__.py  base_method_docstore.py  mongo_service.py
ingestion_modules/custom_loader/: __init__.py  custom_pdf_loader.py  custom_web_loader.py
ingestion_modules/custom_text_splitter/: __init__.py  custom_splitter.py
ingestion_modules/custom_vectorstore/: __init__.py  qdrant_service.py
system_component/: __init__.py  system_logging.py
tests/: hive_config_test.toml  test_agent.py  test_sdk_context.py  test_swarm.py
tests/chat/: test_chat_manager.py
tests/database/: test_database.py
tests/filestore/: test_filestore.py
tests/llms/: test_llm.py  test_llms.py
tests/server/routes/: test_chat.py  test_database.py  test_entry.py  test_files.py  test_vectorindex.py
tests/store/: test_store.py
tests/tools/: test_basic_retrieve.py  test_nl_query.py  test_schemas.py
tests/tools/retriever/: test_base_retrieve.py  test_chroma_retrieve.py  test_pinecone_retrieve.py
tests/wallet/: test_immutabledict.py  test_wallet.py  test_walletstore.py
