[tool.poetry]
name = "hive-agent"
version = "0.0.1"
description = "This library provides you with an easy way to create and run Hive Agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.115.0"
uvicorn = "0.30.6"
python-dotenv = "1.0.1"
web3 = { version = "7.2.0", optional = true }
py-solc-x = { version = "2.0.3", optional = true }
eth-account = { version = "0.13.3", optional = true }
SQLAlchemy = "2.0.29"
aiosqlite = "0.20.0"
toml = "0.10.2"
python-multipart = "0.0.9"
llama-index = "0.11.14"
llama-index-llms-anthropic = "0.3.4"
llama-index-llms-mistralai = "0.2.5"
llama-index-llms-ollama = "0.3.3"
llama-index-llms-openai = "0.2.9"
llama-index-llms-gemini = "0.3.5"
llama-index-multi-modal-llms-openai = "0.2.1"
llama-index-vector-stores-chroma = "0.2.0"
llama-index-vector-stores-pinecone = "0.2.1"
llama-index-readers-s3 = "0.2.0"
chromadb = "0.5.5"
langtrace-python-sdk = "*"
asyncpg = "^0.29.0"
openpyxl = "3.1.5"
docx2txt = "0.8"
xlrd = "2.0.1"

[tool.poetry.extras]
web3 = ["web3", "py-solc-x", "eth-account"]

[tool.poetry.dev-dependencies]
python = "^3.11"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
pytest-mock = "3.14.0"
httpx = "0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
